--- a/views/index.html
+++ b/views/index.html
@@ -10,10 +10,11 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="game.init.js" type="text/javascript"></script>
-  <script src="game.animation.js" type="text/javascript"></script>
 </head>
 <body>
-  <p>HELLO WORLD</p>
+  <canvas id="canvas"></canvas>
+
+  <script src="game.init.js" type="text/javascript"></script>
+  <script src="game.animation.js" type="text/javascript"></script>
 </body>
 </html>
